--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>envy hose</title>
 </head>
 <body>
-    hello world
+    <h3>
+        Things I've built
+    </h3>
+    <ul>
+        <li><a target="_blank" href="https://www.venue.market">venue.market</a></li>
+        <li><a target="_blank" href="https://www.ethergames.io">ethergames.io</a></li>
+        <li><a target="_blank" href="https://www.dobscoin.com">dobscoin.com</a></li>
+    </ul>
+    <a target="_blank" href="https://mirror.xyz/envyhose.eth/">blog</a>
+    <div>envy@nvus.io</div>
+
+
+
 </body>
 </html>
