--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://pbs.twimg.com/profile_images/1726565027120066560/0Y_7_KGF_400x400.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="ENVYHOSE" />
+  <link rel="shortcut icon" type="image/png" href="/coin.jpeg">
   <link rel="apple-touch-icon" href="https://pbs.twimg.com/profile_images/1726565027120066560/0Y_7_KGF_400x400.jpg" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
